force-app/main/default/objects/CntrinTrans__c/CntrinTrans__c.object-meta.xml
<CustomObject>
    <label>CNTR in Trans</label>
    <nameField>
        <displayFormat>CNTR-{00000}</displayFormat>
        <label>CNTR in Trans</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CNTR in Trans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>