force-app/main/default/objects/CntrinTrans__c/fields/ActualContainerPickupDate__c.field-meta.xml
<CustomField>
    <fullName>ActualContainerPickupDate__c</fullName>
    <label>Actual Container Pickup Date</label>
    <type>Date</type>
</CustomField>