force-app/main/default/objects/CntrinTrans__c/fields/AdvancedShipment__c.field-meta.xml
<CustomField>
    <fullName>AdvancedShipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advanced Shipment</label>
    <referenceTo>AdvancedShipment__c</referenceTo>
    <relationshipLabel>CNTR in Trans</relationshipLabel>
    <relationshipName>CNTRinTrans</relationshipName>
    <type>Lookup</type>
</CustomField>