force-app/main/default/objects/CntrinTrans__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <formula>F_TMS_S_O__r.Agent__r.Name</formula>
    <label>Agent</label>
    <type>Text</type>
</CustomField>