force-app/main/default/objects/CntrinTrans__c/fields/AgentEmptyReturnDate__c.field-meta.xml
<CustomField>
    <fullName>AgentEmptyReturnDate__c</fullName>
    <label>Agent Empty Return Date</label>
    <type>Date</type>
</CustomField>