force-app/main/default/objects/CntrinTrans__c/fields/Booking_No__c.field-meta.xml
<CustomField>
    <fullName>Booking_No__c</fullName>
    <label>Booking No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>