force-app/main/default/objects/CntrinTrans__c/fields/Cargo_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Quantity__c</fullName>
    <label>Cargo Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>