force-app/main/default/objects/CntrinTrans__c/fields/Cargo_Unit_Text__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Unit_Text__c</fullName>
    <label>Cargo Unit Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>