force-app/main/default/objects/CntrinTrans__c/fields/CargoUnit__c.field-meta.xml
<CustomField>
    <fullName>CargoUnit__c</fullName>
    <label>Cargo Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CargoUnit</valueSetName>
    </valueSet>
</CustomField>