force-app/main/default/objects/CntrinTrans__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <formula>F_TMS_S_O__r.CarrierAirlinerVendor__r.Name</formula>
    <label>Carrier</label>
    <type>Text</type>
</CustomField>