force-app/main/default/objects/CntrinTrans__c/fields/CombinedDEMDETDeadline__c.field-meta.xml
<CustomField>
    <fullName>CombinedDEMDETDeadline__c</fullName>
    <formula>ETA__c +  CombinedDEMDETDuration__c</formula>
    <label>Combined DEM&amp;DET Deadline</label>
    <type>Date</type>
</CustomField>