force-app/main/default/objects/CntrinTrans__c/fields/CombinedDEMDETDeadlineReached__c.field-meta.xml
<CustomField>
    <fullName>CombinedDEMDETDeadlineReached__c</fullName>
    <formula>CombinedDEMDETDeadline__c - TODAY() &lt;= 2</formula>
    <label>Combined DEM&amp;DET Deadline Reached</label>
    <type>Checkbox</type>
</CustomField>