force-app/main/default/objects/CntrinTrans__c/fields/ConsolCNTR__c.field-meta.xml
<CustomField>
    <fullName>ConsolCNTR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consol CNTR</label>
    <referenceTo>ConsolCNTR__c</referenceTo>
    <relationshipLabel>CNTR in Trans</relationshipLabel>
    <relationshipName>CNTR_in_Trans</relationshipName>
    <type>Lookup</type>
</CustomField>