force-app/main/default/objects/CntrinTrans__c/fields/Container_Ownership_Code__c.field-meta.xml
<CustomField>
    <fullName>Container_Ownership_Code__c</fullName>
    <label>Container Ownership Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>