force-app/main/default/objects/CntrinTrans__c/fields/ContainerCutoffTime__c.field-meta.xml
<CustomField>
    <fullName>ContainerCutoffTime__c</fullName>
    <label>Container Cut-off Time</label>
    <type>DateTime</type>
</CustomField>