force-app/main/default/objects/CntrinTrans__c/fields/ContainerDetailedInformation__c.field-meta.xml
<CustomField>
    <fullName>ContainerDetailedInformation__c</fullName>
    <formula>Text(Container_Quantity__c)  &amp;  &quot;x&quot;  &amp;   Text(Container_Type__c)  &amp; &quot;/&quot;  &amp; Container_Number__c  &amp;  &quot;/&quot;  &amp;  Seal_Number__c</formula>
    <label>Container Detail Information</label>
    <type>Text</type>
</CustomField>