force-app/main/default/objects/CntrinTrans__c/fields/ContainerFreeTime__c.field-meta.xml
<CustomField>
    <fullName>ContainerFreeTime__c</fullName>
    <label>Container Free Time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>