force-app/main/default/objects/CntrinTrans__c/fields/Created_by_copy__c.field-meta.xml
<CustomField>
    <fullName>Created_by_copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by copy</label>
    <type>Checkbox</type>
</CustomField>