force-app/main/default/objects/CntrinTrans__c/fields/CrossBorderDate__c.field-meta.xml
<CustomField>
    <fullName>CrossBorderDate__c</fullName>
    <label>Cross Border Date</label>
    <type>Date</type>
</CustomField>