force-app/main/default/objects/CntrinTrans__c/fields/Customer_Request__c.field-meta.xml
<CustomField>
    <fullName>Customer_Request__c</fullName>
    <label>Customer Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>