force-app/main/default/objects/CntrinTrans__c/fields/DemDeadline__c.field-meta.xml
<CustomField>
    <fullName>DemDeadline__c</fullName>
    <formula>ETA__c  + DEMDuration__c</formula>
    <label>Dem Deadline</label>
    <type>Date</type>
</CustomField>