force-app/main/default/objects/CntrinTrans__c/fields/DemDeadlineReached__c.field-meta.xml
<CustomField>
    <fullName>DemDeadlineReached__c</fullName>
    <formula>DemDeadline__c  -  TODAY() &lt;= 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dem Deadline Reached</label>
    <type>Checkbox</type>
</CustomField>