force-app/main/default/objects/CntrinTrans__c/fields/EmptyFull_Container_Identification__c.field-meta.xml
<CustomField>
    <fullName>EmptyFull_Container_Identification__c</fullName>
    <label>Empty/Full Container Identification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>