force-app/main/default/objects/CntrinTrans__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <formula>F_TMS_S_O__r.ETA__c</formula>
    <label>ETA</label>
    <type>Date</type>
</CustomField>