force-app/main/default/objects/CntrinTrans__c/fields/F_TMS_S_O__c.field-meta.xml
<CustomField>
    <fullName>F_TMS_S_O__c</fullName>
    <label>F/TMS S/O</label>
    <referenceTo>FTMSSO__c</referenceTo>
    <relationshipLabel>CNTR in Trans</relationshipLabel>
    <relationshipName>CNTR_in_Trans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>