force-app/main/default/objects/CntrinTrans__c/fields/IsCreatebyfunction__c.field-meta.xml
<CustomField>
    <fullName>IsCreatebyfunction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCreatebyfunction</label>
    <type>Checkbox</type>
</CustomField>