force-app/main/default/objects/CntrinTrans__c/fields/IsDeletebyfunction__c.field-meta.xml
<CustomField>
    <fullName>IsDeletebyfunction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDeletebyfunction</label>
    <type>Checkbox</type>
</CustomField>