force-app/main/default/objects/CntrinTrans__c/fields/JobNo__c.field-meta.xml
<CustomField>
    <fullName>JobNo__c</fullName>
    <formula>F_TMS_S_O__r.JobRequestID__c</formula>
    <label>Job No.</label>
    <type>Text</type>
</CustomField>