force-app/main/default/objects/CntrinTrans__c/fields/Measurement_CBM__c.field-meta.xml
<CustomField>
    <fullName>Measurement_CBM__c</fullName>
    <label>Measurement(CBM)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>