force-app/main/default/objects/CntrinTrans__c/fields/Net_Weight_Kg__c.field-meta.xml
<CustomField>
    <fullName>Net_Weight_Kg__c</fullName>
    <label>Net Weight(Kg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>