force-app/main/default/objects/CntrinTrans__c/fields/Salesman__c.field-meta.xml
<CustomField>
    <fullName>Salesman__c</fullName>
    <formula>HYPERLINK( &quot;/&quot; &amp; CASESAFEID(F_TMS_S_O__r.Salesman__r.Id)
,F_TMS_S_O__r.Salesman__r.FirstName&amp;&quot; &quot;&amp;F_TMS_S_O__r.Salesman__r.LastName
, &quot;_self&quot; )</formula>
    <label>Salesman</label>
    <type>Text</type>
</CustomField>