force-app/main/default/objects/CntrinTrans__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <formula>text(F_TMS_S_O__r.TypeofTrade__c)</formula>
    <label>Term</label>
    <type>Text</type>
</CustomField>