force-app/main/default/objects/CntrinTrans__c/fields/Transportation__c.field-meta.xml
<CustomField>
    <fullName>Transportation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transportation</label>
    <referenceTo>Transportation__c</referenceTo>
    <relationshipLabel>CNTR in Trans</relationshipLabel>
    <relationshipName>CNTR_in_Trans</relationshipName>
    <type>Lookup</type>
</CustomField>