force-app/main/default/objects/CntrinTrans__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CNTR in Trans</relationshipLabel>
    <relationshipName>CNTR_in_Trans</relationshipName>
    <type>Lookup</type>
</CustomField>