force-app/main/default/objects/CntrinTrans__c/fields/Vessel_Voyage_No__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Voyage_No__c</fullName>
    <label>Vessel Voyage No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>