force-app/main/default/objects/CntrinTrans__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>AdvancedShipment__c</columns>
    <columns>F_TMS_S_O__c</columns>
    <columns>Container_Number__c</columns>
    <columns>Seal_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>